tvv-header+slider

--- a/home.html
+++ b/home.html
@@ -18,13 +18,48 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
     <div id="main">
+      <!-- Begin: header -->
       <div id="header">
-        <div id="nav"></div>
+        <!--Begin: title -->
+        <div class="main-title"><a href="#">Oval rental</a></div>
+        <!-- End: title -->
+        <!-- Begining a list -->
+        <div id="order-list">
+          <ul class="nav">
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Offers</a></li>
+          </ul>
+        </div>
+        <!-- Ending a list -->
+        <!-- Begin: Search button -->
+        <div class="search-button">
+          <a href="">
+            <i class="nav-search fa-solid fa-magnifying-glass"></i>
+          </a>
+        </div>
+        <!-- End: Search button -->
       </div>
+      <!-- End: header -->
+      <!-- Begin: slider -->
+      <div id="slider">
+        <div class="text-content">
+          <h1 class="text-heading">Discover</h1>
+          <pre class="text-subheading">
+the world
+with
+Oval rental
+        </pre
+          >
+        </div>
+      </div>
+    </div>
+      <!-- End: slider -->
       <div id="content">
         <div class="desc"></div>
         <div class="offer"></div>
