--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -18,8 +18,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="./assets/fonts/stylesheet.css">
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/fonts/stylesheet.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
   </head>
   <body>
     <div id="main">
@@ -31,7 +31,7 @@
         <!-- Begining a list -->
         <div id="order-list">
           <ul class="nav">
-            <li><a href="">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Offers</a></li>
           </ul>
@@ -61,9 +61,6 @@ Oval rental
     </div>
       <!-- End: slider -->
       <div id="content">
-        <div class="desc"></div>
-        <div class="offer"></div>
-        <div class="about-us"></div>
       </div>
       <div id="footer"></div>
     </div>
