--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -20,20 +20,21 @@
     />
     <link rel="stylesheet" href="../assets/fonts/stylesheet.css">
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="..//assets/css/responsive.css">
   </head>
   <body>
     <div id="main">
       <!-- Begin: header -->
       <div id="header">
         <!--Begin: title -->
-        <div class="main-title"><a href="#">Oval rental</a></div>
+        <div class="main-title"><a href="../index.html">Oval rental</a></div>
         <!-- End: title -->
         <!-- Begining a list -->
         <div id="order-list">
           <ul class="nav">
             <li><a href="../index.html">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Offers</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Reserve a room</a></li>
           </ul>
         </div>
         <!-- Ending a list -->
@@ -46,8 +47,8 @@
         <!-- End: Search button -->
       </div>
       <!-- End: header -->
-      <!-- Begin: slider -->
-      <div id="slider">
+      <!-- Begin: banner -->
+      <div id="banner">
         <div class="text-content">
           <h1 class="text-heading">Discover</h1>
           <pre class="text-subheading">
@@ -59,7 +60,7 @@ Oval rental
         </div>
       </div>
     </div>
-      <!-- End: slider -->
+      <!-- End: banner -->
       <div id="content">
       </div>
       <div id="footer"></div>
