fix book now button bug on mobile

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Oval rental
                 <div class="room-desc pd16">
                   <h5 class="room-desc-header">Vip Room</h5>
                   <div class="room-desc-content">This is description. This is description. This is description. This is description.</div>
-                  <div class="icon mgt32">
+                  <div class="icon mgtb32">
                     <i class="fa-solid fa-wifi"></i>
                     <i class="fa-solid fa-tv"></i>
                     <i class="fa-solid fa-champagne-glasses"></i>
@@ -105,7 +105,7 @@ Oval rental
                 <div class="room-desc pd16">
                   <h5 class="room-desc-header">Double Room</h5>
                   <div class="room-desc-content">This is description. This is description. This is description. This is description.</div>
-                  <div class="icon mgt32">
+                  <div class="icon mgtb32">
                     <i class="fa-solid fa-wifi"></i>
                     <i class="fa-solid fa-tv"></i>
                     <i class="fa-solid fa-wind"></i>
@@ -121,7 +121,7 @@ Oval rental
                 <div class="room-desc pd16">
                   <h5 class="room-desc-header">Single Room</h5>
                   <div class="room-desc-content">This is description. This is description. This is description. This is description.</div>
-                  <div class="icon mgt32">
+                  <div class="icon mgtb32">
                     <i class="fa-solid fa-wifi"></i>
                     <i class="fa-solid fa-tv"></i>
                     <i class="fa-solid fa-wind"></i>
@@ -136,7 +136,7 @@ Oval rental
                 <div class="room-desc pd16">
                   <h5 class="room-desc-header">Affordable Room</h5>
                   <div class="room-desc-content">This is description. This is description. This is description. This is description.</div>
-                  <div class="icon mgt32">
+                  <div class="icon mgtb32">
                     <i class="fa-solid fa-wifi"></i>
                     <i class="fa-solid fa-tv"></i>
                     <i class="fa-solid fa-wind"></i>
