--- a/pages/reserve.html
+++ b/pages/reserve.html
@@ -1,69 +1,204 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Oval Rental</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="../assets/fonts/stylesheet.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="..//assets/css/responsive.css">
-  </head>
-  <body>
-    <div id="main">
-      <!-- Begin: header -->
-      <div id="header">
-        <!--Begin: title -->
-        <div class="main-title"><a href="../index.html">Oval rental</a></div>
-        <!-- End: title -->
-        <!-- Begining a list -->
-        <div id="order-list">
-          <ul class="nav">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Reserve a room</a></li>
-          </ul>
-        </div>
-        <!-- Ending a list -->
-        <!-- Begin: Search button -->
-        <div class="search-button">
-          <a href="">
-            <i class="nav-search fa-solid fa-magnifying-glass"></i>
-          </a>
-        </div>
-        <!-- End: Search button -->
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Oval Rental</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../assets/fonts/stylesheet.css">
+  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="..//assets/css/responsive.css">
+</head>
+
+<body>
+  <div id="main">
+    <!-- Begin: header -->
+    <div id="header">
+      <!--Begin: title -->
+      <div class="main-title"><a href="../index.html">Oval rental</a></div>
+      <!-- End: title -->
+      <!-- Begining a list -->
+      <div id="order-list">
+        <ul class="nav">
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Reserve a room</a></li>
+        </ul>
       </div>
-      <!-- End: header -->
-      <!-- Begin: banner -->
-      <div id="banner">
-        <div class="text-content">
-          <h1 class="text-heading">Discover</h1>
-          <pre class="text-subheading">
+      <!-- Ending a list -->
+      <!-- Begin: Search button -->
+      <div class="search-button">
+        <a href="">
+          <i class="nav-search fa-solid fa-magnifying-glass"></i>
+        </a>
+      </div>
+      <!-- End: Search button -->
+    </div>
+    <!-- End: header -->
+
+    <!-- Begin: banner -->
+    <div id="banner">
+      <div class="text-content">
+        <h1 class="text-heading">Discover</h1>
+        <pre class="text-subheading">
 the world
 with
 Oval rental
-        </pre
-          >
+        </pre>
+      </div>
+    </div>
+    <!-- End: banner -->
+
+    <div id="content">
+      <!-- Begin: Book section -->
+      <div class="reserve">
+
+        <div class="part-header pd32">
+          <p>Our product</p>
         </div>
+
+        <!-- Begin: Room list -->
+        <div class="reserve-content">
+          <div class="row">
+            <!-- Room item 1 -->
+            <div class="room-item col-12 col-lg-6 pd32">
+              <img src="../assets/img/Room/vipRoom.jpg" alt="Vip Room">
+              <div class="room-desc pd16">
+                <h5 class="room-desc-header">Vip Room</h5>
+                <div class="room-desc-content">This is description. This is description. This is description. This is
+                  description.</div>
+                <div class="icon mgtb32">
+                  <i class="fa-solid fa-wifi"></i>
+                  <i class="fa-solid fa-tv"></i>
+                  <i class="fa-solid fa-champagne-glasses"></i>
+                  <i class="fa-solid fa-wind"></i>
+                </div>
+                <a href="#" class="room-book pd16">Book now!</a>
+              </div>
+            </div>
+
+            <!-- Room item 2 -->
+            <div class="room-item col-12 col-lg-6 pd32">
+              <img src="../assets/img/Room/doubleRoom.jpg" alt="Double Room">
+              <div class="room-desc pd16">
+                <h5 class="room-desc-header">Double Room</h5>
+                <div class="room-desc-content">This is description. This is description. This is description. This is
+                  description.</div>
+                <div class="icon mgtb32">
+                  <i class="fa-solid fa-wifi"></i>
+                  <i class="fa-solid fa-tv"></i>
+                  <i class="fa-solid fa-wind"></i>
+                </div>
+                <a href="#" class="room-book pd16">Book now!</a>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <!-- Room item 3 -->
+            <div class="room-item col-12 col-lg-6 pd32">
+              <img src="../assets/img/Room/SingleRoom.jpg" alt="Single Room">
+              <div class="room-desc pd16">
+                <h5 class="room-desc-header">Single Room</h5>
+                <div class="room-desc-content">This is description. This is description. This is description. This is
+                  description.</div>
+                <div class="icon mgtb32">
+                  <i class="fa-solid fa-wifi"></i>
+                  <i class="fa-solid fa-tv"></i>
+                  <i class="fa-solid fa-wind"></i>
+                </div>
+                <a href="#" class="room-book pd16">Book now!</a>
+              </div>
+            </div>
+
+            <!-- Room item 4 -->
+            <div class="room-item col-12 col-lg-6 pd32">
+              <img src="../assets/img/Room/affordableRoom.jpg" alt="Affordable Room">
+              <div class="room-desc pd16">
+                <h5 class="room-desc-header">Affordable Room</h5>
+                <div class="room-desc-content">This is description. This is description. This is description. This is
+                  description.</div>
+                <div class="icon mgtb32">
+                  <i class="fa-solid fa-wifi"></i>
+                  <i class="fa-solid fa-tv"></i>
+                  <i class="fa-solid fa-wind"></i>
+                </div>
+                <a href="#" class="room-book pd16">Book now!</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+        <!-- End: Room list -->
+        <!-- Begin: Form section -->
+        <div class="booking-section">
+          <div class="part-header pd32">
+            <p>Let's go!</p>
+            <a id="bk-st"></a>
+          </div>
+
+          <form class="booking-form" action="" method="get">
+            <!-- row 1 -->
+            <div class="row pd16">
+              <div class="col-12 col-md-6 col-lg-6">
+                <input class="full-width pd12" type="text" placeholder="Name">
+              </div>
+              <div class="col-12 col-md-6 col-lg-6">
+                <input class="full-width pd12" type="tel" placeholder="Phone">
+              </div>
+            </div>
+
+            <!-- row 2 -->
+            <div class="row pd16">
+              <div class="col-12 col-md-5 col-lg-4">
+                <label for="quantity">Amount of people: </label>
+                <input class="pd12" type="number" id="quantity" name="quantity" min="1" max="5">
+              </div>
+              <div class="col-12 col-md-7 col-lg-8">
+                <input class="full-width pd12" type="email" placeholder="Email">
+              </div>
+            </div>
+            <!-- row 3 -->
+            <div class="row pd16">
+              <div class="col-12 col-md-3 col-lg-4">
+                <p>Room type:</p>
+              </div>
+              <div class="col-12 col-md-2 col-lg-2">
+                <input type="radio" name="room-Type" checked>VIP
+              </div>
+              <div class="col-12 col-md-2 col-lg-2">
+                <input type="radio" name="room-Type">Double
+              </div>
+              <div class="col-12 col-md-2 col-lg-2">
+                <input type="radio" name="room-Type">Single
+              </div>
+              <div class="col-12 col-md-3 col-lg-2">
+                <input type="radio" name="room-Type">Affordable
+              </div>
+            </div>
+            <!-- row 4 -->
+            <div class="row pd16">
+              <div class="col-12">
+                <input class="form-btn full-width pd12" type="submit" value="Submit">
+              </div>
+            </div>
+        </div>
+        </form>
       </div>
+      <!-- End: Form section -->
     </div>
-      <!-- End: banner -->
-      <div id="content">
-      </div>
-      <div id="footer"></div>
+    <!-- End: Book section -->
+
+    <div id="footer">
     </div>
-  </body>
+  </div>
+
+  </div>
+</body>
+
 </html>
