change login button and register button

--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
         <!-- Ending a list -->
         <!-- Begin: login and register button -->
         <ul class="login-button">
-          <a class="nav-login" href="">
-            <li>Login</li>
-          </a>
-          <a class="nav-bracket" href="">
-            <li>|</li>
-          </a>
-          <a class="nav-register" href="">
-            <li>Register</li>
-          </a>
+          <li class="nav-login">
+            <a href="">Login</a>
+          </li>
+          <li class="nav-bracket">
+            <a href="">|</a>
+          </li>
+          <li class="nav-register">
+            <a href="">Register</a>
+          </li>
         </ul>
         <!-- End: login and register button -->
       </div>
