--- a/index.html
+++ b/index.html
@@ -113,12 +113,38 @@ Oval rental
         </div>
       </div>
       <!-- End: banner -->
-
       <!-- Begin:content -->
       <div id="content">
         <div class="desc">
           <div class="part-header pd32">
-            <p>Try the new experience now!</p>
+            <p>location</p>
+          </div>
+          <div class="illustrate">
+            <p>
+              Oval Rental hotel is located right in the heart of Hanoi - A
+              thousand-year-old city with various outstanding structures and
+              signature cuisine. Visiting this hotel, visitors could experience
+              our top-tier services, enjoying fresh air around Hoan Kiem lake,
+              as well as being immersed in the tranquil atmosphere of the mossy
+              old town.
+            </p>
+          </div>
+          <p class="embedded-map">
+            <iframe
+              class="map-frame"
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3724.2480167702565!2d105.847229!3d21.022760000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab93d06bf0e9%3A0x5630d4b7aee3a42d!2zQ2FwaXRhbCBCdWlsZGluZywgNzIgVHLhuqduIEjGsG5nIMSQ4bqhbywgSG_DoG4gS2nhur9tLCBIw6AgTuG7mWksIFZpZXRuYW0!5e0!3m2!1sen!2sus!4v1654012677124!5m2!1sen!2sus"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
+          </p>
+        </div>
+        <div class="desc">
+          <div class="part-header pd32">
+            <p>New experience now!</p>
           </div>
         </div>
 
