up date responsive 1024px

--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@ Oval rental
           src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3724.2480167702565!2d105.847229!3d21.022760000000005!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab93d06bf0e9%3A0x5630d4b7aee3a42d!2zQ2FwaXRhbCBCdWlsZGluZywgNzIgVHLhuqduIEjGsG5nIMSQ4bqhbywgSG_DoG4gS2nhur9tLCBIw6AgTuG7mWksIFZpZXRuYW0!5e0!3m2!1sen!2sus!4v1654012677124!5m2!1sen!2sus"
           width="100%"
           height="450"
-          style="border: 0"
+          style="border: 0;
+          width: 100%;"
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
