--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ Oval rental
       </p>
       <div id="footer">
         <div class="container">
-          <div class="row">
+          <div class="row rps_footer">
             <div class="col col-sm-6 col-lg-3">
               <div class="container-about-logo">
                 <a href="#">
